# fraud-detection-system

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml
database/postgresql/migrations/: 001_initial_schema.sql
database/postgresql/stored_procedures/: 001_initial_stored_procedures.sql
database/postgresql/triggers/: 001_initial_triggers.sql
database/timescaledb/migrations/: 001_initial_schema.sql
database/timescaledb/seeds/: README.md  seed_transactions.py
docker/airflow/: Dockerfile
docker/fastapi/: Dockerfile
docker/grafana/: Dockerfile
docker/kafka/: Dockerfile
docker/mlflow/: Dockerfile
docs/: dev-plan.md  eda_findings.md  implementation-story.md
ingestion/consumer/: feature_models.py  feature_publisher.py  historical.py  kafka_consumer.py  main.py  models.py  redis_store.py  timescale_writer.py  windows.py
ingestion/producer/: generator.py  kafka_producer.py  main.py  models.py
ingestion/schemas/: fraud_alert.avsc  transaction_features.avsc  transaction_prediction.avsc  transaction_raw.avsc
model/notebooks/: eda_base.ipynb  eda_correlations.ipynb  eda_temporal.ipynb
monitoring/grafana/dashboards/: drift_monitor.json  fraud_alerts.json  model_performance.json  system_health.json
monitoring/grafana/provisioning/: dashboards.yaml  datasources.yaml
scripts/: seed-timescale.sh  setup.sh
serving/app/: main.py
