[project]
name = "fraud-detection-system"
version = "0.1.0"
description = "A fraud detection system using machine learning techniques."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
serving = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
