[project]
name = "fraud-detection-system"
version = "0.1.0"
description = "A fraud detection system using machine learning techniques."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
serving = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]
producer = [
  "confluent-kafka>=2.11.0,<3.0.0",
  "faker>=37.5.3,<38.0.0",
  "fastavro>=1.12.0,<2.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
]
consumer = [
  "confluent-kafka>=2.11.0,<3.0.0",
  "fastavro>=1.12.0,<2.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "redis>=5.0.0,<6.0.0",
]
notebooks = [
  "ipykernel>=6.29.0,<7.0.0",
  "jupyterlab>=4.2.0,<5.0.0",
  "matplotlib>=3.8.0,<4.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "scikit-learn>=1.4.0,<2.0.0",
  "seaborn>=0.13.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
